# voc

./: .env  .gitignore  README.md  main.py  pyproject.toml  skills-lock.json
OLD/: README.md
OLD/legacy-entrypoints/: main.py
backend_api/: README.md  __init__.py  auth.py  db_utils.py  main.py  rag_client.py  schemas.py
backend_api/routes/: advice.py  auth.py  expert_playbooks.py  handling_advices.py  health.py  overview.py  rag.py  taxonomy.py  tickets.py  users.py
backend_api/tests/: test_advice_route.py  test_auth.py  test_handling_advices_route.py  test_rag_client.py
chainlit_app/: README.md  app.py  auth.py  chainlit.md
chainlit_app/.chainlit/: config.toml
chainlit_app/public/: favicon  theme.json  (+1 more)
docs/: README.md  complaint-taxonomy-design.md  current-agent-architecture.md  database-tables.md  db_checklist.md  db_design.md  project-map.md  project_steps.md  system-evolution-rag-backend.md
frontend/: package.json  proxy.ts
progress_dashboard/: .env.example  README.md  app.py  db.py  queries.py  requirements.txt
scripts/: run-agent-500.ps1
sql_scripts/: 11. 标签统计表.sql  14. 标签-关键词统计表.sql  2026-04-10_ticket_id_and_raw_ticket_status_alignment.sql  2026-04-11_converger_agent_schema.sql  2026-05-06_converger_data_audit.sql  2026-05-16_expert_handling_playbook.sql  2026-05-16_rag_integration_tables.sql  2026-05-17_backend_auth_tables.sql  三级分类.sql  二级分类.sql  分类-关键词统计表.sql  分类-标签统计关系表.sql  分类关键词规则表.sql  初始化常用标签值.sql  处理建议规则表.sql  工单关键词抽取结果表.sql  工单标签结果表.sql
streamlit_app/: Home.py  __init__.py  app_services.py
voc_agent/: README.md  langgraph.json
(+592 files in other folders)
