[project]
name = "voc"
version = "0.1.0"
description = "Telecom complaint taxonomy and agent runtime"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.1",
    "langgraph>=1.1.6",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "psycopg[binary]>=3.2.9",
    "langgraph-cli[inmem]>=0.4.21",
]

[project.scripts]
voc = "main:main"
